--- a/CryptoManager.Data/CryptoManager.Data.csproj
+++ b/CryptoManager.Data/CryptoManager.Data.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\202109010524159_Funds Deleted.Designer.cs">
       <DependentUpon>202109010524159_Funds Deleted.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109011009372_Annotations.cs" />
+    <Compile Include="Migrations\202109011009372_Annotations.Designer.cs">
+      <DependentUpon>202109011009372_Annotations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
@@ -86,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202109010524159_Funds Deleted.resx">
       <DependentUpon>202109010524159_Funds Deleted.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109011009372_Annotations.resx">
+      <DependentUpon>202109011009372_Annotations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
